Started on the lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required (VERSION 2.8.11)
 project (language)
 
-set(FILES 
+set(FILES
+    src/lexer.hpp
+    src/lexer.cpp
     src/tokenizer.hpp
     src/tokenizer.cpp
     src/main.cpp
